# LBM-comfyui

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: lbm_relight.json
src/lbm/inference/: __init__.py  inference.py  utils.py
src/lbm/models/embedders/latents_concat/: latents_concat_embedder_model.py
