[project]
name = "lbm"
description = "Nodes for Jasper's LBM models"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Robert Habermeier", email = "rphmeier@gmail.com"},
]
maintainers = [
    { name = "Robert Habermeier", email = "rphmeier@gmail.com"},
]
version = "0.1.1"
license = { file = "LICENSE.txt" }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/thrumdev/lbm-comfyui"
Repository = "https://github.com/thrumdev/lbm-comfyui"

[tool.comfy]
PublisherId = "thrumdev"
DisplayName = "LBM Latent Bridge Matching"
Description = "ComfyUI support for Jasper's LBM models, including relighting"
